test/bad/loops/until01.px

until false do
    skip

until 7 do
    print 7
